--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -58,20 +58,26 @@
 }
 
 .archive__item-authors {
-  margin-top: 0;
+  margin-top: 0em;
+  margin-bottom: 0em;
   font-size: $type-size-6;
 
   & + p {
     text-indent: 0;
+    margin-top: 0.25em;
+    margin-bottom: 0em;
   }
 }
 
 .archive__item-paperinfo {
   margin-top: 0;
+  margin-bottom: 0.25em;
   font-size: $type-size-5;
 
   & + p {
     text-indent: 0;
+    margin-top: 0;
+    margin-bottom: 0em;
   }
 }
 
@@ -87,7 +93,7 @@
 }
 
 .archive__item-teaser {
-  margin-top: 2.5em;
+  margin-top: 0em;
   border-radius: $border-radius;
   overflow: hidden;
   width: 20%;
@@ -101,6 +107,17 @@
   overflow: hidden;
   width: 70%;
   float: left;
+
+  .archive__item-title {
+    margin-top: 0em;
+    margin-bottom: 0em;
+
+    font-family: $sans-serif-narrow;
+  
+    a + a {
+      opacity: 0.5;
+    }
+  }
 }
 
 .archive__item:hover {
@@ -130,6 +147,9 @@
   @include breakpoint($x-large) {
     padding-right: $right-sidebar-width-wide;
   }
+
+    
+  padding-bottom: 2em;
 
   .page__meta {
     margin: 0 0 4px;
