--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -20,7 +20,7 @@
   @include breakpoint($large) {
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    // @include suffix(0.5 of 12);
   }
 
   .page__inner-wrap {
@@ -36,7 +36,7 @@
 
 .page__title {
   margin-top: 0;
-  line-height: 1;
+  line-height: 2;
 
   & + .page__meta {
     margin-top: -0.5em;
