--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -157,7 +157,8 @@ hr {
   display: block;
   margin: 1em 0;
   border: 0;
-  border-top: 1px solid $border-color;
+  // border-top: 1px solid $border-color;
+  border-top: 1px dashed mix(#fff, $text-color, 25%);
 }
 
 /* lists */
