--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -102,6 +102,7 @@
 
 .archive__item-text {
   margin-top: 0em;
+  margin-bottom: 1em;
   padding-left: 1em;
   border-radius: $border-radius;
   overflow: hidden;
